--- a/.github/workflows/master_projetangulargitazure.yml
+++ b/.github/workflows/master_projetangulargitazure.yml
@@ -24,14 +24,14 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
-          npm run build --if-present
-          npm run test --if-present
+          npm run build 
+          
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: node-app
-          path: .
+          path: ./dist/notions/browser
 
   deploy:
     runs-on: ubuntu-latest
